Fixed sidebar collapsing and active color. MAR functionality TBD

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -28,6 +28,12 @@
     }
   }
 
+  &--blue {
+    @include button($blue, $blue, $white, transparent, $blue);
+    padding: rem(12) rem(50);
+    font-weight: 400;
+  }
+
   &--ghost {
     @include button($white, transparent, $white, $white, $scooter);
   }
